# hs-helloworld

./: .clinerules  .editorconfig  .hlint.yaml  Makefile  README.md  cabal.project.freeze  helloworld.cabal  package.yaml
.github/workflows/: ci.yaml
app/: Main.hs
examples/: Main.hs  Monads.ts
src/: Lib.hs  Sort.hs
test/: SortSpec.hs  Spec.hs
