cabal-version: 2.2
name: helloworld
version: 0.1.0.0
description: wip
author: mizchi
maintainer: miz404@gmail.com
copyright: 2025 Author name here
license: MIT
license-file: LICENSE
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/githubuser/helloworld

library
  exposed-modules:
    Lib

  other-modules:
    Paths_helloworld

  autogen-modules:
    Paths_helloworld

  hs-source-dirs:
    src

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

  build-depends:
    base >=4.20 && <5,
    -- JSON parsing
    aeson ^>= 2.2,
    -- HTTP client
    req ^>= 3.13,
    -- Text manipulation
    text ^>= 2.1,
    -- URI parsing
    modern-uri ^>= 0.3,
    -- For try/catch
    exceptions,
    cabal-gild,
  build-tool-depends:
    cabal-gild:cabal-gild >=1.6.0.0,
    ormolu:ormolu >= 0.8.0.0,
    hlint:hlint >= 3.8.0.0,
  default-language: Haskell2010

executable helloworld-exe
  main-is: Main.hs
  hs-source-dirs:
    app

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.20 && <5,
    helloworld,
    req ^>= 3.13,
    aeson ^>= 2.2,
    text ^>= 2.1,
    bytestring ^>= 0.11,

  default-language: Haskell2010

test-suite helloworld-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Paths_helloworld

  autogen-modules:
    Paths_helloworld

  hs-source-dirs:
    test

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    HUnit ^>=1.6,
    base >=4.20 && <5,
    helloworld,
    -- JSON parsing
    aeson ^>= 2.2,
    -- HTTP client
    req ^>= 3.13,
    -- Text manipulation
    text ^>= 2.1,
    -- URI parsing
    modern-uri ^>= 0.3,
    -- For try/catch
    exceptions,

  default-language: Haskell2010
